Cria pagina de configuracoes com funcao de alterar o tempo das repeticoes

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "react-native-example",
+    "name": "Counter",
     "slug": "snack-aee58a37-52ee-4e8d-9f82-375d5a3337f6",
     "version": "1.0.0",
     "orientation": "portrait",
